--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   
   <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="bundle.js?59f23e40ac3ff769d452"></script></body>
+    <div class="fruit-machine"></div>
+  <script type="text/javascript" src="bundle.js?43b992683d40bb4ce49c"></script></body>
 </html>
