--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
     <title>Fruit Machine</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   
   <body>
     <div class="fruit-machine"></div>
-  <script type="text/javascript" src="bundle.js?17411a6d421451cba73c"></script></body>
+  <script type="text/javascript" src="bundle.js?8d949aed2bfbfd31507f"></script></body>
 </html>
