--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
-    <title>Fruit Machine</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  </head>
-  
-  <body>
-    <div class="fruit-machine"></div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>Fruit Machine</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
+</head>
+
+<body>
+<div class="fruit-machine">
+  <div class="header">
+    <h1>Fruit Machine</h1>
+  </div>
+  <div class="game">
+    <div class="reels-wrapper">
+      <div class="reel"></div>
+      <div class="reel"></div>
+      <div class="reel"></div>
+    </div>
+    <div class="spin">
+      <p class="spin-cost"></p>
+      <button class="spin-button">Spin!</button>
+    </div>
+    <p class="message"></p>
+  </div>
+  <div class="info">
+    <h2>Score</h2>
+    <p class="current-score"></p>
+    <p class="previous-score"></p>
+    <p class="total-score"></p>
+    <p class="best-score"></p>
+
+    <h2>Money</h2>
+    <p class="money"></p>
+
+    <h2>Other</h2>
+    <p class="spin-amount"></p>
+  </div>
+</div>
+</body>
 </html>
