--- a/static/index.html
+++ b/static/index.html
@@ -22,9 +22,13 @@
     </div>
     <div class="spin">
       <p class="spin-cost"></p>
-      <button class="spin-button">Spin!</button>
+      <button class="btn spin-button">Spin</button>
     </div>
-    <p class="message"></p>
+
+    <div class="message-wrapper">
+      <p class="message"></p>
+      <button class="btn get-credit" style="display: none;">Wanna get credit?</button>
+    </div>
   </div>
   <div class="info">
     <h2>Score</h2>
@@ -35,6 +39,10 @@
 
     <h2>Money</h2>
     <p class="money"></p>
+
+    <h2>Credit</h2>
+    <p class="credit"></p>
+    <button class="btn repay-credit" style="display: none;">Repay credit</button>
 
     <h2>Other</h2>
     <p class="spin-amount"></p>
