--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="spin">
       <p class="spin-cost"></p>
-      <button class="btn spin-button">Spin!</button>
+      <button class="btn spin-button">Spin</button>
     </div>
 
     <div class="message-wrapper">
@@ -42,10 +42,11 @@
 
     <h2>Credit</h2>
     <p class="credit"></p>
+    <button class="btn repay-credit" style="display: none;">Repay credit</button>
 
     <h2>Other</h2>
     <p class="spin-amount"></p>
   </div>
 </div>
-<script type="text/javascript" src="bundle.js?d3764364db1daeeac49b"></script></body>
+<script type="text/javascript" src="bundle.js?698e49368c66ea4e63b7"></script></body>
 </html>
