--- a/static/index.html
+++ b/static/index.html
@@ -14,12 +14,14 @@
   <div class="header">
     <h1>Fruit Machine</h1>
   </div>
+
   <div class="game">
     <div class="reels-wrapper">
       <div class="reel"></div>
       <div class="reel"></div>
       <div class="reel"></div>
     </div>
+
     <div class="spin">
       <p class="spin-cost"></p>
       <button class="btn spin-button">Spin</button>
@@ -30,6 +32,24 @@
       <button class="btn get-credit" style="display: none;">Wanna get credit?</button>
     </div>
   </div>
+
+  <div class="prize-table">
+    <table class="hidden">
+      <caption>
+        <h2>Prize table</h2>
+      </caption>
+      <thead>
+      <tr>
+        <th>Item</th>
+        <th>3 same</th>
+        <th>2 same</th>
+        <th>2 same + 'Wild'</th>
+      </tr>
+      </thead>
+    </table>
+    <button class="btn toggle-prize-table">Show prize table</button>
+  </div>
+
   <div class="info">
     <h2>Score</h2>
     <p class="current-score"></p>
