--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
   </div>
 
   <div class="game">
-    <div class="reels-wrapper">
-      <div class="reel"></div>
-      <div class="reel"></div>
-      <div class="reel"></div>
-    </div>
+    <div class="reels"></div>
 
     <div class="spin">
       <p class="spin-cost"></p>
@@ -68,5 +64,5 @@
     <p class="spin-amount"></p>
   </div>
 </div>
-<script type="text/javascript" src="bundle.js?5756c5d592ee5a948ef5"></script></body>
+<script type="text/javascript" src="bundle.js?3404f3c00cd74fc91c47"></script></body>
 </html>
