--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="game">
-    <div class="reels"></div>
+    <div class="reels-wrapper"></div>
 
     <div class="spin">
       <p class="spin-cost"></p>
@@ -64,5 +64,5 @@
     <p class="spin-amount"></p>
   </div>
 </div>
-<script type="text/javascript" src="bundle.js?3404f3c00cd74fc91c47"></script></body>
+<script type="text/javascript" src="bundle.js?102cd78c991f02a57188"></script></body>
 </html>
