Add spinning animation for reels; Make major code refactoring; Disable babel in webpack.config.js

--- a/static/index.html
+++ b/static/index.html
@@ -16,11 +16,7 @@
   </div>
 
   <div class="game">
-    <div class="reels-wrapper">
-      <div class="reel"></div>
-      <div class="reel"></div>
-      <div class="reel"></div>
-    </div>
+    <div class="reels-wrapper"></div>
 
     <div class="spin">
       <p class="spin-cost"></p>
