--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-<div class="fruit-machine">
-  <div class="header">
+<main class="fruit-machine">
+  <header class="header">
     <h1>Fruit Machine</h1>
-  </div>
+    <button class="btn toggle-info">Show info</button>
+  </header>
 
   <div class="game">
     <div class="reels-wrapper"></div>
@@ -29,8 +30,28 @@
     </div>
   </div>
 
-  <div class="prize-table">
-    <table class="hidden">
+  <div class="info hidden">
+    <div class="inner">
+      <h2>Score</h2>
+      <p class="current-score"></p>
+      <p class="previous-score"></p>
+      <p class="total-score"></p>
+      <p class="best-score"></p>
+
+      <h2>Money</h2>
+      <p class="money"></p>
+
+      <h2>Credit</h2>
+      <p class="credit"></p>
+      <button class="btn repay-credit" style="display: none;">Repay credit</button>
+
+      <h2>Other</h2>
+      <p class="spin-amount"></p>
+    </div>
+  </div>
+
+  <div class="prize-table hidden">
+    <table>
       <caption>
         <h2>Prize table</h2>
       </caption>
@@ -43,26 +64,11 @@
       </tr>
       </thead>
     </table>
+  </div>
+
+  <footer class="footer">
     <button class="btn toggle-prize-table">Show prize table</button>
-  </div>
-
-  <div class="info">
-    <h2>Score</h2>
-    <p class="current-score"></p>
-    <p class="previous-score"></p>
-    <p class="total-score"></p>
-    <p class="best-score"></p>
-
-    <h2>Money</h2>
-    <p class="money"></p>
-
-    <h2>Credit</h2>
-    <p class="credit"></p>
-    <button class="btn repay-credit" style="display: none;">Repay credit</button>
-
-    <h2>Other</h2>
-    <p class="spin-amount"></p>
-  </div>
-</div>
-<script type="text/javascript" src="bundle.js?d2557518b33ee2ca84f1"></script></body>
+  </footer>
+</main>
+<script type="text/javascript" src="bundle.js?38513bad473522afcf23"></script></body>
 </html>
