--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       <h2>Other</h2>
       <p class="spin-amount init-count-up"></p>
     </div>
+
+    <button class="btn toggle-info">Close info</button>
   </div>
 
   <div class="prize-table hidden">
@@ -70,6 +72,8 @@
       </tr>
       </thead>
     </table>
+
+    <button class="btn toggle-prize-table">Close prize table</button>
   </div>
 
   <footer class="footer">
@@ -77,5 +81,5 @@
     <button class="btn toggle-info">Show info</button>
   </footer>
 </main>
-<script type="text/javascript" src="bundle.js?e1acb301f6fbf90c8dc0"></script></body>
+<script type="text/javascript" src="bundle.js?59b585740505cacdccf8"></script></body>
 </html>
