--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="spin-cost init-count-up"></p>
         <p class="money init-count-up"></p>
       </div>
-      
+
       <div class="right">
         <button class="btn spin-button">Spin</button>
       </div>
@@ -78,8 +78,9 @@
 
   <footer class="footer">
     <button class="btn toggle-prize-table">Show prize table</button>
+    <button class="btn repay-credit" style="display: none;">Repay credit</button>
     <button class="btn toggle-info">Show info</button>
   </footer>
 </main>
-<script type="text/javascript" src="bundle.js?59b585740505cacdccf8"></script></body>
+<script type="text/javascript" src="bundle.js?a7dc6003c22727ef20be"></script></body>
 </html>
